examples/ha/envoy.yaml
# Envoy configuration for HA RLQS deployment.
#
# This config demonstrates Envoy connecting to multiple RLQS instances
# behind a STRICT_DNS cluster. Envoy load-balances gRPC streams across
# all healthy endpoints.

static_resources:
  listeners:
    - name: main
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: upstream
                http_filters:
                  - name: envoy.filters.http.rate_limit_quota
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.rate_limit_quota.v3.RateLimitQuotaFilterConfig

                      rlqs_server:
                        transport_api_version: V3
                        grpc_services:
                          - envoy_grpc:
                              cluster_name: rlqs_server

                      domain: "example-app"

                      bucket_matchers:
                        matcher_list:
                          matchers:
                            - predicate:
                                single_predicate:
                                  input:
                                    name: request-headers
                                    typed_config:
                                      "@type": type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
                                      header_name: x-user-class
                                  value_match:
                                    exact: api
                              on_match:
                                action:
                                  name: api-bucket
                                  typed_config:
                                    "@type": type.googleapis.com/envoy.extensions.filters.http.rate_limit_quota.v3.RateLimitQuotaBucketSettings
                                    bucket_id_builder:
                                      bucket_id_builder:
                                        "name":
                                          string_value: "api-users"
                                    reporting_interval: 10s
                                    no_assignment_behavior:
                                      fallback_rate_limit:
                                        blanket_rule: ALLOW_ALL
                                    expired_assignment_behavior:
                                      fallback_rate_limit:
                                        blanket_rule: ALLOW_ALL

                        on_no_match:
                          action:
                            name: default-bucket
                            typed_config:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.rate_limit_quota.v3.RateLimitQuotaBucketSettings
                              bucket_id_builder:
                                bucket_id_builder:
                                  "name":
                                    string_value: "catch-all"
                              reporting_interval: 10s
                              no_assignment_behavior:
                                fallback_rate_limit:
                                  blanket_rule: ALLOW_ALL
                              expired_assignment_behavior:
                                fallback_rate_limit:
                                  blanket_rule: ALLOW_ALL

                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: upstream
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      load_assignment:
        cluster_name: upstream
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: httpbin.org
                      port_value: 443
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          sni: httpbin.org

    # RLQS cluster with multiple endpoints for HA.
    # Envoy distributes gRPC streams across both instances.
    - name: rlqs_server
      type: STRICT_DNS
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: {}
      load_assignment:
        cluster_name: rlqs_server
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: rlqs-1
                      port_value: 18081
              - endpoint:
                  address:
                    socket_address:
                      address: rlqs-2
                      port_value: 18081
      health_checks:
        - timeout: 2s
          interval: 10s
          unhealthy_threshold: 3
          healthy_threshold: 1
          grpc_health_check:
            service_name: "envoy.service.rate_limit_quota.v3.RateLimitQuotaService"

admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
